codepkg/objects/Page_Layout_Validation__mdt.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expression__c</fullName>
        <label>Expression</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <inlineHelpText>Add comma-separated field API names</inlineHelpText>
        <label>Field API Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Page_Layout_Config__c</fullName>
        <label>Page Layout Config</label>
        <referenceTo>Page_Layout__mdt</referenceTo>
        <relationshipLabel>Page Layout Validations</relationshipLabel>
        <relationshipName>Page_Layout_Validations</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Page Layout Validation</label>
    <pluralLabel>Page Layout Validations</pluralLabel>
</CustomObject>